--- a/quickstarts/_template/config.yaml
+++ b/quickstarts/_template/config.yaml
@@ -1,8 +1,12 @@
+# Name of your quickstart as shown on the website
 name: Add the name of your quickstart
+
+# Optional: Authors of the quickstart
 authors:
     - Samuel V.
     - Stijn P.
-# Optionally you can add additional sources as some won't be auto detected by the scripts.
+
+# Optional: Add additional sources as some can't be auto detected by the scripts (for example Prometheus data).
 # You can also redirect to external webpages when the dashboards provides specific installation instructions
 sources:
   - Kubernetes
