--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-yaml": "^3.14.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
