--- a/quickstarts/flex-example/config.yaml
+++ b/quickstarts/flex-example/config.yaml
@@ -1,5 +1,5 @@
 # Name of your quickstart as shown on the website
-name: Flex
+name: Flex Examples
 
 # Optional: Authors of the quickstart
 authors:
