Updated view to new design with added description

--- a/quickstarts/apm-infrastructure/config.yaml
+++ b/quickstarts/apm-infrastructure/config.yaml
@@ -1,3 +1,4 @@
 name: APM + Infrastructure
+description: Set of dashboards based on New Relic APM and Infrastructure agent data, linking metrics together for a deeper visibility into your stack.
 authors:
     - Ryan Jussel
