--- a/quickstarts/flex-example/config.yaml
+++ b/quickstarts/flex-example/config.yaml
@@ -1,5 +1,6 @@
 # Name of your quickstart as shown on the website
 name: Flex Examples
+description: Set of Flex Examples that you can use within your environments. For more examples check out the Flex repository.
 
 # Optional: Authors of the quickstart
 authors:
