--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.5.0",
     "js-yaml": "^3.14.0",
     "node-sass": "^4.14.1",
+    "nr1-bootstrap-theme": "https://github.com/newrelic/nr1-bootstrap-theme.git",
+    "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -21,6 +23,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-syntax-highlighter": "^12.2.1"
+  },
+  "nr1": {
+    "uuid": "dcaa3623-1e1c-41a3-a1d9-994499f4b66d"
   },
   "scripts": {
     "start": "react-scripts start",
