--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "nr-quickstarts",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://newrelic-experimental.github.io/quickstarts",
