--- a/quickstarts/_template/config.yaml
+++ b/quickstarts/_template/config.yaml
@@ -1,5 +1,6 @@
 # Name of your quickstart as shown on the website
 name: Add the name of your quickstart
+description: Describe what's the focus of your dashboards
 
 # Optional: Authors of the quickstart
 authors:
