--- a/quickstarts/_template/config.yaml
+++ b/quickstarts/_template/config.yaml
@@ -1,6 +1,9 @@
 # Name of your quickstart as shown on the website
 name: Add the name of your quickstart
-description: Describe what's the focus of your dashboards
+description: >
+  Describe what's the focus of your dashboards.
+  You can use multiple lines.
+  Try to be as descriptive as possible.
 
 # Optional: Authors of the quickstart
 authors:
