Updated browser example to latest api changes

--- a/quickstarts/browser/config.yaml
+++ b/quickstarts/browser/config.yaml
@@ -2,3 +2,4 @@ name: Browser examples
 description: Set of dashboards based on New Relic Browser agent data.
 authors:
     - New Relic
+    - Alex York
