--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,14 @@ jobs:
 
     - name: Build data file
       run: |
-        pushd packages/generator/
+        pushd website/generator/
         npm install
         bash generate-data.sh
         popd
 
     - name: Build website
       run: |
-        pushd packages/website/
+        pushd website/
         npm install
         npm run build
         popd
@@ -39,4 +39,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: packages/website/build # The folder the action should deploy.
+        FOLDER: website/build # The folder the action should deploy.
