--- a/website/package.json
+++ b/website/package.json
@@ -4,10 +4,6 @@
   "private": true,
   "homepage": "https://newrelic-experimental.github.io/quickstarts",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,8 +17,7 @@
     "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-syntax-highlighter": "^12.2.1"
+    "react-scripts": "3.4.1"
   },
   "nr1": {
     "uuid": "dcaa3623-1e1c-41a3-a1d9-994499f4b66d"
