--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,13 @@ jobs:
       with:
         node-version: 12.x
 
+    - name: Install libraries
+      run: |
+        pushd website/
+        npm install
+        popd
+        npm install
+
     - name: install nr1 cli
       run: curl -s https://cli.nr-ext.net/installer.sh | sudo bash
 
