--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.14.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
