--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.6.0"
+    "@newrelic/eslint-plugin-newrelic": "^0.3.1",
+    "eslint": "^6.6.0",
+    "prettier": "^2.2.1"
   }
 }
