Added kubernetes utilization dashboard

--- a/quickstarts/kubernetes/config.yaml
+++ b/quickstarts/kubernetes/config.yaml
@@ -5,3 +5,4 @@ description: Set of dashboards for the New Relic Kubernetes integration.
 # Optional: Authors of the quickstart
 authors:
     - Brad S.
+    - Shawn Potts
