feat: updating semantic release

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.17
 
       - name: Cache node_modules
         id: cache-node-modules
@@ -51,7 +51,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.17
 
       - name: Cache node_modules
         id: cache-node-modules
@@ -95,7 +95,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
         with:
-          node-version: 10.x
+          node-version: 14.17
 
       - name: Cache node_modules
         id: cache-node-modules
