--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@newrelic/eslint-plugin-newrelic": "^0.3.1",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/changelog": "6.0.0",
+    "@semantic-release/git": "10.0.0",
     "eslint": "^6.6.0",
     "prettier": "^2.2.1",
     "react": "16.6.3",
